--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,8 +1,8 @@
 {
-    "githubUsername": "GitHub-Laziji",
-    "blogTitle": "Laziji",
-    "blogDescribe": "欢迎来到辣子鸡的个人博客。",
-    "htmlTitle": "辣子鸡的博客",
+    "githubUsername": "Enderzzm",
+    "blogTitle": "Ender_zzm",
+    "blogDescribe": "欢迎来到Ender_zzm的个人博客。",
+    "htmlTitle": "zzm的博客",
     "fontColor": "#ffffff",
     "useBackgroundImage": false,
     "backgroundColorLeft": "#2690F9",
